--- a/src/main/resources/static/css/template.css
+++ b/src/main/resources/static/css/template.css
@@ -800,6 +800,7 @@ margin-right:15px;
 	margin-bottom: 40px;
 	background: white;
 	padding-top:20px;
+	padding-bottom:20px;
 }
 
 .texto-contenido-derecha{
