--- a/src/main/resources/templates/auditoria/organigrama.html
+++ b/src/main/resources/templates/auditoria/organigrama.html
@@ -17,7 +17,11 @@
 	    <header th:insert="fragments/header :: navbar"> </header>
 		
 		<!-- Contenido Principal -->
-        <div class="main container-fluid">
+        <div class="main container-fluid bodydiv">
+        
+        	<br>
+		<div class="contenido-blanco">
+        
         <!-- Todo el contenido principal se coloca aquí -->
         	<h1 class="titulo-seccion bold text-center">Organigrama Auditoría Interna</h1>
 	        	<div class="contenido">
@@ -28,6 +32,7 @@
         
         <!-- Fin del contenido principal -->
         <div class="actualizacion bold"></div>
+        </div>
         </div>
         
 		<!-- Footer -->
