--- a/src/main/resources/templates/admin/opciones.html
+++ b/src/main/resources/templates/admin/opciones.html
@@ -37,11 +37,26 @@
 <div  class="col-lg-12">
 
 
-<a class="btn btn-primary  btn-lg btn-block" th:href="@{/admin/cursos/listaCursos}" role="button" title=""><i class="fas fa-file" aria-hidden="true"></i> Cursos</a>                            
+<a class="btn btn-danger  btn-lg btn-block" th:href="@{/admin/cursos/listaCursos}" role="button" title=""><i class="fas fa-file" aria-hidden="true"></i> Cursos</a>                            
 
 </div>
 </div>
+<div  class="row">
+<div  class="col-lg-12">
 
+
+<a class="btn btn-info btn-lg btn-block" th:href="@{/admin/cursos/listaCursos}" role="button" title=""><i class="fas fa-file" aria-hidden="true"></i> Usuarios</a>                            
+
+</div>
+</div>
+<div  class="row">
+<div  class="col-lg-12">
+
+
+<a class="btn btn-primary  btn-lg btn-block" th:href="@{/admin/cursos/listaPerfiles}" role="button" title=""><i class="fas fa-file" aria-hidden="true"></i> Perfiles</a>                            
+
+</div>
+</div>
 <div  class="row">
 
 <div  class="col-lg-12">
