--- a/src/main/resources/templates/cursos/vistaCursos.html
+++ b/src/main/resources/templates/cursos/vistaCursos.html
@@ -58,7 +58,7 @@
 					<p th:text="${curso.descripcion}"></p>
 					<p>
 						<a class="btn btn-secondary float-right"
-							th:href="@{/cursos/view/{id} (id=${curso.id}) }" role="button">Detalles
+							th:href="@{/cursos/view/{id} (id=${curso.idcurso}) }" role="button">Detalles
 							&raquo;</a>
 					</p>
 				</div>
