--- a/src/main/resources/templates/admin/listadoCursos.html
+++ b/src/main/resources/templates/admin/listadoCursos.html
@@ -43,6 +43,8 @@
             <div th:if="${msgregistro != null}" class='alert alert-success' th:text="${msgregistro}" role='alert'></div>
             <div th:if="${msgborrado != null}" class='alert alert-danger' th:text="${msgborrado}" role='alert'></div>
             
+           <div th:if="${msg == null}" class='alert alert-success' th:text="${msg}" role='alert'>
+            <!-- TABLA DE LISTA DE CURSOS -->
             <table class="table table-hover">
               <thead class="thead-light">
                 <tr>
@@ -53,6 +55,8 @@
                 </tr>
               </thead>
               <tbody>
+        
+              
                 <tr th:each="curso : ${cursos}">
                   
                   <td th:text="${curso.nombre}"></td>  
@@ -68,6 +72,9 @@
                 </tr>                                              
               </tbody>
             </table>
+            </div>  
+            
+            <!-- -->
             
           </div>
         </div>
