--- a/src/main/resources/templates/cursos/vistaCursos.html
+++ b/src/main/resources/templates/cursos/vistaCursos.html
@@ -43,7 +43,7 @@
 			<div class="row" th:each="curso: ${cursos}">
 				<div class="col-md-3">
 					<img class="rounded mx-auto d-block"
-						th:src="@{/images/cursos/{img} (img=${curso.imagen})}"
+						th:src="@{/logos/{img} (img=${curso.imagen})}"
 						alt="Generic placeholder image" width="220" height="220">
 				</div>
 				<div class="col-md-9">
