--- a/src/main/resources/templates/admin/formCurso.html
+++ b/src/main/resources/templates/admin/formCurso.html
@@ -6,14 +6,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="">
 <meta name="author" content="">
-  <link rel="stylesheet" th:href="@{//code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css}">
- <!--   <link rel="stylesheet" th:href="@{//resources/demos/style.css}">-->
-  
+<link rel="stylesheet"
+	th:href="@{//code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css}">
+<!--   <link rel="stylesheet" th:href="@{//resources/demos/style.css}">-->
+
 <link rel="shortcut icon" href="..static/images/escudo-uabc-favicon.png"
 	type="image/x-icon" th:href="@{/images/escudo-uabc-favicon.png}">
 <link href="../static/css/bootstrap.min.css" rel="stylesheet"
 	th:href="@{/css/bootstrap.min.css}" />
-<link href="../static/css/template.css" rel="stylesheet" th:href="@{/css/template.css}" />
+<link href="../static/css/template.css" rel="stylesheet"
+	th:href="@{/css/template.css}" />
 <title>Auditoría Interna</title>
 <style>
 /* Make the image fully responsive */
@@ -30,17 +32,18 @@
 	</div>
 
 	<div class="main container-fluid">
-	<!--  <h1 class="titulo-seccion bold text-center">
+		<!--  <h1 class="titulo-seccion bold text-center">
 		Registro 
-		</h1>-->	
+		</h1>-->
 
 		<div class="contenido-formulario">
-	<div class="card">
+			<div class="card">
 				<h5 class="card-header">
 					<strong>Datos del curso</strong>
 				</h5>
 				<div class="card-body">
-					<form th:action="@{/admin/cursos/save}" method=POST th:object="${curso}" enctype="multipart/form-data">
+					<form th:action="@{/admin/cursos/save}" method=POST
+						th:object="${curso}" enctype="multipart/form-data">
 						<div th:if="${#fields.hasErrors('*')}" class='alert alert-danger'
 							role='alert'>
 							Por favor corrija los siguientes errores:
@@ -52,89 +55,96 @@
 							<div class="col-md-3">
 								<div class="form-group">
 									<label for="nombre">Nombre</label> <input type="text"
-										class="form-control" th:field="*{nombre}" id="nombre" name="nombre"
-										placeholder="Titulo del curso"
+										class="form-control" th:field="*{nombre}" id="nombre"
+										name="nombre" placeholder="Titulo del curso"
 										required="required">
 								</div>
 							</div>
 							<div class="col-md-9">
 								<div class="form-group">
 									<label for="descripcion">Descripción</label> <input type="text"
-										class="form-control" id="descripcion" th:field="*{descripcion}" name="descripcion"
-										placeholder="Breve descripcion del curso"
-										required="required">
+										class="form-control" id="descripcion"
+										th:field="*{descripcion}" name="descripcion"
+										placeholder="Breve descripcion del curso" required="required">
 								</div>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-3">
 								<div class="form-group">
-									<label for="fecha">Fecha del curso</label> <input
-										type="text" class="form-control" th:field="*{fecha}" name="fecha" id="fecha"
-										placeholder="Fecha de publicacion" required="required">
+									<label for="fecha">Fecha del curso</label> <input type="text"
+										class="form-control" th:field="*{fecha}" name="fecha"
+										id="fecha" placeholder="Fecha de publicacion"
+										required="required">
 								</div>
 							</div>
-						<div class="col-md-6">
+							<div class="col-md-6">
 								<div class="form-group">
 									<label for="presentador">Presentador(es)</label> <input
-										type="text" class="form-control" th:field="*{presentador}" name="presentador" id="presentador"
-										placeholder="Nombre del presentador o presentadores" required="required">
+										type="text" class="form-control" th:field="*{presentador}"
+										name="presentador" id="presentador"
+										placeholder="Nombre del presentador o presentadores"
+										required="required">
 								</div>
 							</div>
 
 							<div class="col-md-3">
 								<div class="form-group">
 									<label for="estatus">Estatus</label> <select
-										class="form-control" th:field="*{estatus}" name="estatus" id="estatus">
+										class="form-control" th:field="*{estatus}" name="estatus"
+										id="estatus">
 										<option value="1">Abierto</option>
 										<option value="2">Cerrado</option>
 										<option value="3">No disponible</option>
 									</select>
 								</div>
 							</div>
-						
-						
+
+
 						</div>
 						<div class="row">
-						<div class="col-md-4">
+							<div class="col-md-4">
 								<div class="form-group">
 									<label for="modalidad">Modalidad</label> <select
-										class="form-control" th:field="*{modalidad}" name="modalidad" id="modalidad">
+										class="form-control" th:field="*{modalidad}" name="modalidad"
+										id="modalidad">
 										<option value="1">Online</option>
 										<option value="2">Presencial</option>
 									</select>
-									
+
 								</div>
 							</div>
 							<div class="col-md-4" id="plat">
 								<div class="form-group">
-									<label for="plataforma">Plataforma</label> <input
-										type="text" class="form-control" th:field="*{plataforma}" name="plataforma" id="plataforma"
-										placeholder="Plataforma donde se brindará el curso" >
+									<label for="plataforma">Plataforma</label> <input type="text"
+										class="form-control" th:field="*{plataforma}"
+										name="plataforma" id="plataforma"
+										placeholder="Plataforma donde se brindará el curso">
 								</div>
 							</div>
-								<div class="col-md-4" id="lug">
+							<div class="col-md-4" id="lug">
 								<div class="form-group">
-									<label for="plataforma">Lugar</label> <input
-										type="text" class="form-control" th:field="*{lugar}" name="lugar" id="lugar"
-										placeholder="Lugar donde se brindará el curso" >
+									<label for="plataforma">Lugar</label> <input type="text"
+										class="form-control" th:field="*{lugar}" name="lugar"
+										id="lugar" placeholder="Lugar donde se brindará el curso">
 								</div>
 							</div>
 							<div class="col-md-4">
 								<div class="form-group">
 									<label for="archivoImagen">Imagen</label> <input type="file"
-										class="form-control-file"  name="archivoImagen"
+										class="form-control-file" name="archivoImagen"
 										id="archivoImagen">
 								</div>
 							</div>
 						</div>
 						<hr>
+
 						<div class="row">
 							<div class="col-md-9">
 								<div class="form-group">
 									<label for="detalle"><strong>Detalles</strong></label>
-									<textarea class="form-control" th:field="*{detalle}" name="detalle" id="detalle"
-										rows="7"></textarea>
+									<textarea class="form-control" th:field="*{detalle}"
+										name="detalle" id="detalle" rows="7"></textarea>
 								</div>
 							</div>
 							<div class="col-md-3">
@@ -144,15 +154,56 @@
 									alt="Generic placeholder image" width="200" height="200">
 							</div>
 						</div>
-						<button type="submit" class="btn btn-primary">Guardar</button>
+						<hr>
+						
+						<div class="row">
+							<div class="col-md-3">
+								<div class="form-group">
+
+									<label for="archivoVideo"><strong>Video</strong></label> <input
+										type="file" class="form-control-file" name="archivoVideo" id="archivoVideo">
+								</div>
+							</div>
+							<div class="col-md-3">
+								<div class="form-group">
+
+									<label for="archivoMaterial"><strong>Material</strong></label> <input
+										type="file" class="form-control-file" name="archivoMaterial"
+										id="archivoMaterial">
+								</div>
+							</div>
+						</div>
+					
+						
+						
+						
+						<!-- <div class="row">
+							<div class="col-md-3">
+								<div class="form-group">
+
+									<label for="video"><strong>Video</strong></label> <input
+										type="file" class="form-control-file" name="video" id="video">
+								</div>
+							</div>
+							<div class="col-md-3">
+								<div class="form-group">
+
+									<label for="material"><strong>Material</strong></label> <input
+										type="file" class="form-control-file" name="material"
+										id="material">
+								</div>
+							</div>
+						</div> -->
+
+						<button type="submit" class="btn btn-primary float-right">Guardar</button>
 					</form>
 				</div>
 			</div>
 		</div>
-				</div>
-			
+	</div>
 
-		</div>
+
+	</div>
 
 
 
@@ -163,8 +214,8 @@
 	<div th:insert="fragments/footer :: footer"></div>
 
 
-	 <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-  <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+	<script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
 	<script
 		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
 		th:src="@{https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js}"
@@ -173,29 +224,27 @@
 	<script src="../static/js/bootstrap.min.js"
 		th:src="@{/js/bootstrap.min.js}"></script>
 	<script src="../static/js/template.js" th:src="@{/js/template.js}"></script>
-		<script th:src="@{/tinymce/tinymce.min.js}"></script>
-		
+	<script th:src="@{/tinymce/tinymce.min.js}"></script>
+
 	<script>
 		$(function() {
 			$("#fecha").datepicker({
 				dateFormat : 'dd-mm-yy'
 			});
 		});
-		
-		$( document ).ready(function() {
+
+		$(document).ready(function() {
 			document.getElementById("plat").setAttribute("class", "mostrar");
-		    document.getElementById("lug").setAttribute("class", "ocultar");
+			document.getElementById("lug").setAttribute("class", "ocultar");
 		});
 
-		
-		tinymce.init({
-		    selector: '#detalle',
-		    plugins: "textcolor, table lists code",
-		    toolbar: " undo redo | bold italic | alignleft aligncenter alignright alignjustify \n\
+		tinymce
+				.init({
+					selector : '#detalle',
+					plugins : "textcolor, table lists code",
+					toolbar : " undo redo | bold italic | alignleft aligncenter alignright alignjustify \n\
 		              | bullist numlist outdent indent | forecolor backcolor table code"
-		});
-		
-		 
+				});
 	</script>
 
 	<!-- Placed at the end of the document so the pages load faster -->
