--- a/src/main/resources/templates/admin/listadoCursos.html
+++ b/src/main/resources/templates/admin/listadoCursos.html
@@ -38,12 +38,15 @@
   <div class="card">
          <!--   <h4 class="card-header"><strong>Listado de Ofertas de Trabajo</strong></h4>        -->      
           <div class="card-body">
-            <a class="btn btn-primary" th:href="@{/admin/cursos/create}" title="Crear nueva Oferta de Trabajo" role="button"><i class="fas fa-file" aria-hidden="true"></i> Nueva</a>            
+            <a class="btn btn-primary" th:href="@{/admin/cursos/create}" title="Crear nuevo curso" role="button"><i class="fas fa-file" aria-hidden="true"></i> Nuevo</a>            
             <hr>
             <div th:if="${msgregistro != null}" class='alert alert-success' th:text="${msgregistro}" role='alert'></div>
             <div th:if="${msgborrado != null}" class='alert alert-danger' th:text="${msgborrado}" role='alert'></div>
             
-           <div th:if="${msg != null}" class='alert alert-primary' th:text="${msg}" role='alert'>
+           <div th:if="${msg != null}" class='alert alert-warning text-center' th:text="${msg}" role='alert'>
+           </div>  
+           
+            <div th:if="${msg == null}">
             <!-- TABLA DE LISTA DE CURSOS -->
             <table class="table table-hover">
               <thead class="thead-light">
@@ -72,8 +75,7 @@
                 </tr>                                              
               </tbody>
             </table>
-            </div>  
-            
+            </div>
             <!-- -->
             
           </div>
