--- a/src/main/resources/templates/cursos/vistaCursos.html
+++ b/src/main/resources/templates/cursos/vistaCursos.html
@@ -12,34 +12,38 @@
 <link href="../static/css/bootstrap.min.css" rel="stylesheet"
 	th:href="@{/css/bootstrap.min.css}" />
 <link href="../static/css/template.css" rel="stylesheet"
-	th:href="@{/css/template.css}"/>
+	th:href="@{/css/template.css}" />
 </head>
 <body>
-		<!--  Header -->
-		<header th:insert="fragments/header :: navbar"> </header>
+	<!--  Header -->
+	<header th:insert="fragments/header :: navbar"> </header>
 
-		<!-- Contenido Principal -->
-		<div class="main container-fluid">
-			<!-- Todo el contenido principal se coloca aquí -->
-			<div class="contenido">
+	<!-- Contenido Principal -->
+	<div class="main container-fluid">
+		<!-- Todo el contenido principal se coloca aquí -->
+		<div class="contenido">
 
 
-				<div class="float-right">
-					<form class="form-inline">
-						<input type="text" class="form-control mb-3 "
-							id="exampleFormControlInput1" placeholder="Nombre del curso">&nbsp;
-		
-						<button type="submit" class="btn btn-primary mb-3">Buscar</button>
+			<div class="float-right">
+				<form class="form-inline">
+					<input type="text" class="form-control mb-3 "
+						id="exampleFormControlInput1" placeholder="Nombre del curso">&nbsp;
 
-					</form>
+					<button type="submit" class="btn btn-primary mb-3">Buscar</button>
 
-				</div>
+				</form>
 
-<br>
-<br>
-<br>
+			</div>
 
-			<h1 class="titulo-seccion bold text-center">Cursos</h1>			<hr>
+			<br> <br> <br>
+
+			<h1 class="titulo-seccion bold text-center">Cursos</h1>
+			<hr>
+
+			<div th:if="${msg != null}" class='alert alert-warning text-center'
+				th:text="${msg}" role='alert'></div>
+
+	<div th:if="${msg == null}">
 			<div class="row" th:each="curso: ${cursos}">
 				<div class="col-md-3">
 					<img class="rounded mx-auto d-block"
@@ -49,7 +53,8 @@
 				<div class="col-md-9">
 					<h5 class="bold" th:text="${curso.nombre}"></h5>
 					<h6 class="card-title">
-						<strong>Fecha </strong> <span th:text="${#dates.format(curso.fecha,'dd-MM-yyyy HH:mm')}"></span>
+						<strong>Fecha </strong> <span
+							th:text="${#dates.format(curso.fecha,'dd-MM-yyyy HH:mm')}"></span>
 					</h6>
 					<h6 class="card-title">
 						<strong>Presentador: </strong> <span
@@ -58,20 +63,22 @@
 					<p th:text="${curso.descripcion}"></p>
 					<p>
 						<a class="btn btn-secondary float-right"
-							th:href="@{/cursos/view/{id} (id=${curso.idcurso}) }" role="button">Detalles
-							&raquo;</a>
+							th:href="@{/cursos/view/{id} (id=${curso.idcurso}) }"
+							role="button">Detalles &raquo;</a>
 					</p>
 				</div>
 			</div>
-
+			</div>
+			
+			
 			<hr>
-			
-						</div>
-			
-			
+
 		</div>
 
-		<!-- Fin del contenido principal -->
+
+	</div>
+
+	<!-- Fin del contenido principal -->
 
 	<!-- Footer -->
 	<div th:insert="fragments/footer :: footer"></div>
