--- a/src/main/resources/templates/cursos/registroAsistente.html
+++ b/src/main/resources/templates/cursos/registroAsistente.html
@@ -40,7 +40,7 @@
 								<div class="card-body">
 			<div th:if="${msg != null}" class='alert alert-success' th:text="${msg}" role='alert'></div>
 				
-			<form th:action="@{/cursos/saveAsistente/{id} (id=${cursoNombre.id})}" method=POST th:object="${asistente}" enctype="multipart/form-data" >
+			<form th:action="@{/cursos/saveAsistente/{id} (id=${cursoNombre.idCurso})}" method=POST th:object="${asistente}" enctype="multipart/form-data" >
 			<div th:if="${#fields.hasErrors('*')}" class='alert alert-danger'
 							role='alert'>
 							Por favor corrija los siguientes errores:
@@ -86,8 +86,8 @@
 				</div>	
 				<div class="form-row">
 				<div class="form-group col-md-4">
-				<select class="form-control" th:field=*{curso.id} hidden="true">
-										<option th:each="curso : ${cursos}" th:value="${cursoNombre.id}" th:text=${curso.nombre}>Ventas</option>
+				<select class="form-control" th:field=*{curso.idCurso} hidden="true">
+										<option th:each="curso : ${cursos}" th:value="${cursoNombre.idCurso}" th:text=${curso.nombre}>Ventas</option>
 				
 									</select>
 				</div>
