--- a/src/main/resources/templates/admin/listadoCursos.html
+++ b/src/main/resources/templates/admin/listadoCursos.html
@@ -69,7 +69,7 @@
                 <td th:text="${curso.estatus==1 ? 'Abierto' : 'Cerrado' }"></td>
                 <!--    <td th:text="${vacante.destacado==1 ? 'SI' : 'NO' }"></td>-->
                   <td>
-                    <a href="#" class="btn btn-success" role="button" title="Editar el registro."><i class="fas fa-pencil-alt" aria-hidden="true"></i></a>
+                    <a th:href="@{/admin/Editar/{id} (id=${curso.idcurso})}" class="btn btn-success" role="button" title="Editar el registro."><i class="fas fa-pencil-alt" aria-hidden="true"></i></a>
                     <a th:href="@{/admin/EliminarCurso/{id} (id=${curso.idcurso}) }"  onclick="return confirm('¿Estas seguro?')" class="btn btn-danger " role="button" title="Eliminar el registro."><i class="fas fa-trash" aria-hidden="true"></i></a>
                   </td>
                 </tr>                                              
