Se termino el modificar de cursos y se reestructuraron los controladores

--- a/src/main/resources/templates/auditoria/opciones.html
+++ b/src/main/resources/templates/auditoria/opciones.html
@@ -37,7 +37,7 @@
 <div  class="col-lg-12">
 
 
-<a class="btn btn-danger  btn-lg btn-block" th:href="@{/admin/cursos/listaCursos}" role="button" title=""><i class="fas fa-file" aria-hidden="true"></i> Cursos</a>                            
+<a class="btn btn-danger  btn-lg btn-block" th:href="@{/cursos/listaCursos}" role="button" title=""><i class="fas fa-file" aria-hidden="true"></i> Cursos</a>                            
 
 </div>
 </div>
@@ -45,7 +45,7 @@
 <div  class="col-lg-12">
 
 
-<a class="btn btn-info btn-lg btn-block" th:href="@{/admin/usuarios/listaUsuarios}" role="button" title=""><i class="fas fa-file" aria-hidden="true"></i> Usuarios</a>                            
+<a class="btn btn-info btn-lg btn-block" th:href="@{/usuarios/listaUsuarios}" role="button" title=""><i class="fas fa-file" aria-hidden="true"></i> Usuarios</a>                            
 
 </div>
 </div>
@@ -53,7 +53,7 @@
 <div  class="col-lg-12">
 
 
-<a class="btn btn-primary  btn-lg btn-block" th:href="@{/admin/cursos/listaPerfiles}" role="button" title=""><i class="fas fa-file" aria-hidden="true"></i> Perfiles</a>                            
+<a class="btn btn-primary  btn-lg btn-block" th:href="@{/perfiles/listaPerfiles}" role="button" title=""><i class="fas fa-file" aria-hidden="true"></i> Perfiles</a>                            
 
 </div>
 </div>
