--- a/src/main/resources/templates/cursos/detalleCurso.html
+++ b/src/main/resources/templates/cursos/detalleCurso.html
@@ -40,7 +40,7 @@
               	</span>
               	<span th:unless="${curso.modalidad==1}"> 
                 <h6 class="card-title"><strong>Modalidad: </strong> <span>Presencial</span></h6>  
-                <h6 class="card-title"><strong>Lugar: </strong> <span>Paraninfo Universitario</span></h6>  
+                <h6 class="card-title"><strong>Lugar: </strong> <span th:text="${curso.lugar}"></span></h6>  
                    
               	</span>
                 <span th:if="${curso.modalidad==1}">            
@@ -57,7 +57,7 @@
                 </div>   
                 
                 <span th:if="${curso.estatus==1}">
-                <a class="btn btn-success float-right" th:href="@{/cursos/createAsistente/{id} (id=${curso.idcurso}) }" role="button" title=""><i class="fas fa-file" aria-hidden="true"></i> Registrarse</a>                            
+                <a class="btn btn-success float-right" th:href="@{/asistentes/createAsistente/{id} (id=${curso.idcurso}) }" role="button" title=""><i class="fas fa-file" aria-hidden="true"></i> Registrarse</a>                            
               	</span>
               	 <span th:unless="${curso.estatus==1}">
               	<a class="btn btn-secondary float-right" th:href="@{/materiales/{mat} (mat=${curso.material})}" role="button" title=""><i class="fas fa-file" aria-hidden="true"></i> Descargar material</a>  
