--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -52,7 +52,7 @@
                     <li class="nav-item"><a class="nav-link" th:href="@{/comentarios/formulario}">Comentarios</a></li>
                      
                      <ul class="navbar-nav">
-                    <li class="nav-item "><a class="nav-link" th:href="@{/admin/index}"><img th:src="@{/images/iniciar-sesion.png}" alt="HTML tutorial" style="width:20px;height:20px;"></a></li>
+                    <li class="nav-item "><a class="nav-link" th:href="@{/auditoria/opciones}"><img th:src="@{/images/iniciar-sesion.png}" alt="HTML tutorial" style="width:20px;height:20px;"></a></li>
                    </ul>
                     
                     
