--- a/src/main/resources/templates/cursos/detalleCurso.html
+++ b/src/main/resources/templates/cursos/detalleCurso.html
@@ -57,7 +57,7 @@
                 </div>   
                 
                 <span th:if="${curso.estatus==1}">
-                <a class="btn btn-success float-right" th:href="@{/asistentes/createAsistente/{id} (id=${curso.idcurso}) }" role="button" title=""><i class="fas fa-file" aria-hidden="true"></i> Registrarse</a>                            
+                <a class="btn btn-success float-right" th:href="@{/asistentes/createAsistente/{id} (id=${curso.idCurso}) }" role="button" title=""><i class="fas fa-file" aria-hidden="true"></i> Registrarse</a>                            
               	</span>
               	 <span th:unless="${curso.estatus==1}">
               	<a class="btn btn-secondary float-right" th:href="@{/materiales/{mat} (mat=${curso.material})}" role="button" title=""><i class="fas fa-file" aria-hidden="true"></i> Descargar material</a>  
