--- a/src/main/resources/templates/cursos/registroAsistente.html
+++ b/src/main/resources/templates/cursos/registroAsistente.html
@@ -40,7 +40,7 @@
 								<div class="card-body">
 			<div th:if="${msg != null}" class='alert alert-success' th:text="${msg}" role='alert'></div>
 				
-			<form th:action="@{/cursos/saveAsistente/{id} (id=${cursoNombre.idCurso})}" method=POST th:object="${asistente}" enctype="multipart/form-data" >
+			<form th:action="@{/asistentes/saveAsistente/{id} (id=${cursoNombre.idCurso})}" method=POST th:object="${asistente}" enctype="multipart/form-data" >
 			<div th:if="${#fields.hasErrors('*')}" class='alert alert-danger'
 							role='alert'>
 							Por favor corrija los siguientes errores:
@@ -49,6 +49,11 @@
 							</ul>
 						</div>
 				<div class="form-row">
+				<div class="form-group col-md-4">
+						<label for="inputPassword4">Nombre(s)</label> <input
+							type="text" class="form-control" th:field="*{nombre}" id="nombre" name="nombre"
+							placeholder="Nombre(s)" required>
+					</div>
 					<div class="form-group col-md-4">
 						<label for="inputEmail4">Apellido Paterno</label> <input type="text"
 							class="form-control" th:field="*{apellidoPaterno}" id="apellidoPaterno" name="apellidoPaterno" placeholder="Apellido Paterno" required>
@@ -58,11 +63,7 @@
 							type="text" class="form-control"th:field="*{apellidoMaterno}" id="apellidoMaterno" name="apellidoMaterno"
 							placeholder="Apellido Materno" required>
 					</div>
-					<div class="form-group col-md-4">
-						<label for="inputPassword4">Nombre(s)</label> <input
-							type="text" class="form-control" th:field="*{nombre}" id="nombre" name="nombre"
-							placeholder="Nombre(s)" required>
-					</div>
+					
 				
 				</div>
 				<div class="form-row">
