--- a/src/main/resources/templates/auditoria/opciones.html
+++ b/src/main/resources/templates/auditoria/opciones.html
@@ -64,7 +64,7 @@
 <div  class="row">
 
 <div  class="col-lg-12">
-<button type="button" class="btn btn-success  btn-lg btn-block">Carrousel</button>
+<a class="btn btn-success  btn-lg btn-block" th:href="@{/carrousel/listado}" role="button" title=""><i class="fas fa-file" aria-hidden="true"></i> Carrousel</a>                            
 
 </div>
 </div>
