--- a/src/main/resources/templates/carrousel/listadoCarrousel.html
+++ b/src/main/resources/templates/carrousel/listadoCarrousel.html
@@ -38,7 +38,7 @@
   <div class="card">
          <!--   <h4 class="card-header"><strong>Listado de Ofertas de Trabajo</strong></h4>        -->      
           <div class="card-body">
-            <a class="btn btn-primary" th:href="@{/carrousel/create}" title="Subir nueva imagen" role="button"><i class="fas fa-file" aria-hidden="true"></i> Nuevo</a>            
+            <a class="btn btn-primary" th:href="@{/carrousel/createCarrousel}" title="Subir nueva imagen" role="button"><i class="fas fa-file" aria-hidden="true"></i> Nuevo</a>            
             <hr>
             <div th:if="${msgregistro != null}" class='alert alert-success' th:text="${msgregistro}" role='alert'></div>
             <div th:if="${msgborrado != null}" class='alert alert-danger' th:text="${msgborrado}" role='alert'></div>
@@ -51,22 +51,18 @@
             <table class="table table-hover">
               <thead class="thead-light">
                 <tr>
-                  <th scope="col">Nombre</th>                  
-                  <th scope="col">Fecha del curso</th>
-                  <th scope="col">Estatus</th>            
+                  <th scope="col">Nombre del Carrousel</th>                  
+                  <th scope="col">Estatus</th>
                   <th scope="col">Operaciones</th>
                 </tr>
               </thead>
               <tbody>
         
               
-                <tr th:each="curso : ${cursos}">
+                <tr th:each="carrousel : ${carrouseles}">
                   
-                  <td th:text="${curso.nombre}"></td>  
-                  
-                                  
-                  <td th:text="${#dates.format(curso.fecha,'dd-MM-yyyy HH:mm')}"></td>
-                <td th:text="${curso.estatus==1 ? 'Abierto' : 'Cerrado' }"></td>
+                  <td th:text="${carrousel.nombre}"></td>  
+               	<td th:text="${curso.estatus==1 ? 'Disponible' : 'No disponible' }"></td>
                 <!--    <td th:text="${vacante.destacado==1 ? 'SI' : 'NO' }"></td>-->
                   <td>
                     <a th:href="@{/cursos/Editar/{id} (id=${curso.idCurso})}" class="btn btn-success" role="button" title="Editar el registro."><i class="fas fa-pencil-alt" aria-hidden="true"></i></a>
